--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,25 @@
-#main{
-    margin-top: 4%;
-    margin-left: 4%;
+/* Changes are mentioned below */
+* {
+    margin: 1%;
 }
-.container{
-    overflow: hidden;
-    
-}
-.p1{
-    display:flex;
-    float: left;
-    flex-direction: column;
-    width: 15%;
-    
-    font-size: 20px;
-    padding-top: 2%; 
-}
-.p2{
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-   
-    padding-top: 10px;
-}
-label{
-    margin: 2%;
-}
-input{
-    padding-top: 1.5%;
-    padding-bottom: 1.5%;
+.text-field {
+    padding: 0.7%;
     text-align: center;
-    margin: 2%;
 }
-.button1{
-     margin-left: 5%;
-     
+#ID {
+    margin-left: 3%;
 }
-button{
-    padding-left: 5%;
-    padding-right: 5%;
+#Price {
+    margin-left: 1.45%;
+}
+#Button {
+    padding: 1.5%;
+    padding-left: 2.5%;
+    padding-right: 5.5%;
     border: 3px solid black;
-    margin-top: 3%;
-    width: 20%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    background-color: white;
 }
-td{
-    width: 42%;
-    font-size: 20px;
-}
-.container1{
-    margin-top: 3%;
+#table1 {
+    padding-right: 5%;
+    width: 40%;
 }
